# distributed_computing

./: .clang-format  CMakeLists.txt  critical.c  critical.h  debug.h  io.h  ipc.c  ipc.h  log.h  logging.c  logging.h  main.c  messages.c  messages.h  priority.c  priority.h  process.c  process.h  queue.c  queue.h  self_conversion.h
